Fix Poplar Insights form label for error messages not showing proper stylings

--- a/src/assets/scss/components/form_insights/form_insights.scss
+++ b/src/assets/scss/components/form_insights/form_insights.scss
@@ -21,11 +21,7 @@ label {
       margin-bottom: 1.5rem;
       label {
         font-family: "Eina03", sans-serif;
-        font-size: 14px;
-        font-weight: 600;
-        color: white;
         text-align: left;
-        margin-bottom: 8px;
         position: relative;
         top: 0.5rem;
         .hs {
